brat/test/golden/imports/use-unqualified.brat.golden
Error in test/golden/imports/use-unqualified.brat on line 4:
main = x
       ^

  x not found in (value) environment

